2012-04-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3517573 ] Problem with SequenceContext migration

2012-04-13  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* brokerOs.c, brokerUpc.c, native.h:
	[ 3517530 ] Implement mark, release routines in CMPIBrokerMemFT 

2012-04-13  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* httpAdapter.c, httpComm.c:
	[ 3516184 ] commClose close socket when file hndl is null

2012-04-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, cimXmlRequest.c, httpAdapter.c, httpComm.c,
	  providerDrv.c, providerMgr.c, sfcBroker.c, sfcb.cfg.pre.in,
	  trace.c, trace.h:
	[ 3501314 ] Add dynamic logging and syslog output to sfcb trace
	(based on patch from Mike Lisanke)

2012-04-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c, control.c, httpAdapter.c, sfcb.cfg.pre.in:
	[ 3440300 ] Allow forced chunked responses

2012-04-05  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* control.c:
	[ 3514627 ] unsupported sfcb.cfg param - use exit call

2012-04-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* utilTypeCk.c:
	[ 3514443 ] sfcb 1.3.14 compilation error

2012-03-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3512094 ] SFCB can leak PAM handles under error conditions

2012-03-29  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 3416054 ] Provider continues despite SIGSEGV
	(patch by Klaus Kaempf)

	* httpAdapter.c:
	[ 3441028 ] sblim-sfcb fails on large https requests
	(patch by Klaus Kaempf)

	* providerDrv.c:
	[ 3408288 ] Safer Signal Handlers

	* interopProvider.c, providerDrv.c, sfcb.cfg.pre.in, 
	  control.c:
	[ 3512575 ] Add indication delivery thread limit and timeout
	
2012-03-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 3505407 ] Client openlog changes settings

2012-03-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c: