@@ -6,6 +6,7 @@ New features:
 - 3440300 Allow forced chunked responses
 - 3501314 Add dynamic logging and syslog output to sfcb trace
 - 3517530 Implement mark, release routines in CMPIBrokerMemFT
+- 3513390 Enforce LD and subscription limits
 
 Bugs fixed:
 
