@@ -1,3 +1,10 @@
+2012-04-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* control.c, indCIMXMLHandler.c, interopServerProvider.c,
+	sfcb.cfg.pre.in, test/TestProviders/tests/Makefile.am,
+	test/TestProviders/tests/limitTest.sh:
+	[ 3513390 ] Enforce LD and subscription limits
+
 2012-04-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* interopProvider.c:
